tdf#143175 - Join elements including a delimiter using a standard iterator

Otherwise, the document's keywords will be duplicated since the first
keyword is written twice. Regression from I19eba57bc6058c317473d0746f06699a09ba2830.

Change-Id: I4c6f840b6e095ca9eaf5ffb53af07280b901e28d